update version and minor changes